Port mod and client lifecycle to Forge 1.20